# CubicBattle3

./: AndroidManifest.xml  Cargo.toml  README.md  lib.rs
.github/workflows/: main.yml
src/: lib.rs  lobby.rs  settings.rs
