[package]
name = "cubicbattle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# ================= Dependencies =================

[dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
log = "0.4"

glow = "0.14"
glam = "0.27"
rand = "0.8"

fontdue = { version = "0.8", default-features = false }

# ================= Release Optimisation =================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
