[package]
name = "cubicbattle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
log = "0.4"
android_logger = "0.14"
ndk = "0.9"

[package.metadata.android]
package = "com.cubicbattle.game"
label = "Cubic Battle"
assets = "assets"
min_sdk_version = 24
target_sdk_version = 34

[[package.metadata.android.uses_feature]]
name = "android.software.vulkan.version"
required = false

# 👇 ХАК: Делаем дебаг-билд быстрым, чтобы не просить ключ подписи
[profile.dev]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
